--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ flask = "^2.3.1"
 psycopg2-binary = "^2.9.6"
 python-dotenv = "^1.0.0"
 waitress = "^2.1.2"
+pyjwt = "^2.6.0"
+caspius = "^1.2"
 
 
 [tool.poetry.group.dev.dependencies]
