--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,22 @@
 services:
+  service:
+    container_name: bntu_platform
+    image: bntu-platform
+    restart: always
+    environment:
+      SERVER_HOST: "0.0.0.0"
+      SERVER_PORT: "8080"
+      SERVER_JWT_SECRET: "9OaSxP3Lta8o"
+      SERVER_WORKERS: "12"
+      DB_HOST: "db"
+      DB_PORT: "5432"
+      DB_USER: "fafafa"
+      DB_PASSWORD: "Zze780m072VH"
+      DB_DATABASE: "platform"
+    ports:
+      - "8080:8080"
+    networks:
+      - platform-network
   db:
     container_name: postgres
     image: postgres
