--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,14 @@ readme = "README.md"
 packages = [{include = "bntu_platform"}]
 
 [tool.poetry.dependencies]
-python = ">=3.9"
+python = ">=3.9,<3.12"
 flask = "^2.3.1"
 psycopg2-binary = "^2.9.6"
 python-dotenv = "^1.0.0"
 waitress = "^2.1.2"
 pyjwt = "^2.6.0"
 caspius = "^1.2"
+minio = "^7.1.14"
 
 
 [tool.poetry.group.dev.dependencies]
