--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       MINIO_PORT: "9000"
       MINIO_ACCESS_KEY: "fafafa"
       MINIO_SECRET_KEY: "fafafa16"
+      SERVER_URL: "0.0.0.0"
     ports:
       - "8080:8080"
     networks:
