--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ black = "^23.3.0"
 pylint = "^2.17.3"
 poethepoet = "^0.19.0"
 pyinstaller = "^5.10.1"
+requests = "^2.31.0"
 
 [tool.poe.tasks]
 tests = 'python -m pytest ./tests'
@@ -49,7 +50,9 @@ disable = [
     "useless-option-value",
     "pointless-string-statement",
     "invalid-name",
-    "raise-missing-from"
+    "raise-missing-from",
+    "too-many-locals",
+    "duplicate-code"
 ]
 
 [tool.pylint.DESIGN]
